Plugin Name: CoursePress Pro
Author: Marko Miljus ( Incsub ) / Rheinard Korf ( Incsub )

CHANGE LOG
=================================================

== Changelog ==

= 1.2.4 =
* Added option for deleting student answers / responses

= 1.2.3.9 =
* Added HTML editor to the units builder
* Fixed issue with hidden students in the reports list (multisite)
* Fixed issue with wrong redirection link when submitting data on the last unit page (front)

= 1.2.3.8 =
* Added scroll (slimscroll) for the long lists of units on the course unit admin page
* Added integration with Messaging (1.1.6.7 and above) plugin (http://premium.wpmudev.org/project/messaging/)
* Fixed issues with BBPress topics when CoursePress is active
* Fixed issues caused by clearfix located in the plugin
* Fixed UX issues with "Resubmit" answer link

= 1.2.3.7 =
* Course Calendar widget updated. New default CSS to work better across themes. Added date indicator selector for better presentation on light and dark themes. Including selector to use custom CSS defined by theme or CSS plugin.
* Fixed issue where the unit editor converts absolute URLs to relative URLs on sites hosted with WPEngine.
* Fixed issue with incorrect unit completion percentages.
* Fixed PHP warnings when using CoursePress with TwentyFifteen theme.

= 1.2.3.6 =
* Fixed: Date translations now work properly.
* Fixed issue with extra content on the unit page singe page
* Fixed Gravity Forms form submission and redirection on the unit pages

= 1.2.3.5 =
* Fixed (potential) issue with student signup when FORCE_SSL_ADMIN is turned on
* Fixed conflicts with Gravity Forms (admin and unit pages)
* Fixed issue with multisite and granting and revoking instructor capabilities.
* Fixed: Comments section no longer showing on course details page.
* Fixed issue with 'Start Learning/Continue Learning' buttons not showing for courses set to manual enrollments.