@@ -8,6 +8,8 @@ CHANGE LOG
 
 = 1.2.4 =
 * Added option for deleting student answers / responses
+* Added option for instructor to access units and other course inner pages without need to enroll into course
+* Fixed JS conflicts caused issues with WP admin menu on hover
 
 = 1.2.3.9 =
 * Added HTML editor to the units builder
